@@ -126,17 +126,6 @@ messages -> WebPageProxy {
 
     ViewScaleFactorDidChange(double scaleFactor)
 
-#if PLATFORM(MAC)
-    # Dictionary support.
-    DidPerformDictionaryLookup(WTF::String text, WebKit::DictionaryPopupInfo dictionaryPopupInfo)
-
-    # Keyboard support messages
-    InterpretKeyEvent(uint32_t type) -> (Vector<WebCore::KeypressCommand> commandName, uint32_t selectionStart, uint32_t selectionEnd, Vector<WebCore::CompositionUnderline> underlines)
-    
-    # Remote accessibility messages
-    RegisterWebProcessAccessibilityToken(CoreIPC::DataReference data)
-#endif
-
 #if PLATFORM(GTK)
     # Support for GTK+ platform keybindings
     GetEditorCommandsForKeyEvent() -> (Vector<WTF::String> commandsList)
